Quick fix to make review text wrap

--- a/react-app/src/components/ListingDetails/ReviewCard.css
+++ b/react-app/src/components/ListingDetails/ReviewCard.css
@@ -34,6 +34,8 @@
 .reviewTextLarge {
     font-size: large;
     width: 530px;
+    white-space: pre-wrap;
+    overflow-wrap: break-word;
 }
 
 .reviewRating {
